[tool.poetry]
name = "rsi-notifications-bot"
version = "0.1.0"
description = ""
authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
