[tool.poetry]
name = "rsi-notifications-bot"
version = "0.1.0"
description = ""
authors = ["Denis Tokarev <wf.denis.tokarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
python-binance = "^1.0.19"
ta-lib = {path = "C:/Users/admin/TA_Lib-0.4.28-cp311-cp311-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
